--- a/index.css
+++ b/index.css
@@ -1232,6 +1232,16 @@
     height: 100%;
     align-self: center;
   }
+  .company-logos {
+    max-width: 20%;
+  }
+  .bullet-list {
+    max-width: 60%;
+    text-align: left; 
+    margin-top: 1em; 
+    margin-bottom: 3em;
+  }
+  
   .home-text10 {
     text-align: center;
   }
