added button animation

--- a/style.css
+++ b/style.css
@@ -76,6 +76,21 @@
   animation-delay: 0.5s; /* animation delay by time */
 }
 
+#floating-social-buttons a:nth-child(1) { animation-delay: 1.2s; }
+#floating-social-buttons a:nth-child(2) { animation-delay: 1.4s; }
+#floating-social-buttons a:nth-child(3) { animation-delay: 1.6s; }
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .list-item {
   display: list-item;
 }
